# uv-box

./: .gitignore  Makefile  OpenAI-GPT-for-PyDevs.ipynb  README.md  main.py  pyproject.toml
fastai-course22/clean/: 02-saving-a-basic-fastai-model.ipynb
fastai-course22/slides/: nlp-intro.ipynb
hypo_tdd/: test_vector.py
hypo_tdd/.hypothesis/examples/04e6b3400353b141/: 481fb3d3c2dc991e
notebooks/: OpenAI-GPT-for-PyDevs.ipynb  gol.ipynb  pytest_mypy.ipynb  rse-course.ipynb
openai_gpt/: api.py  chaining.py  get_openai_models.py  query_gpt35turbo.py  query_gpt4.py  stream_gpt4.py
teasers/: test_teasers.py
